--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "backend/beachparty/api/**/*.rs": {
+    "backend/**/*.rs": {
       "runtime": "vercel-rust@4.0.0-beta.4"
     }
   }
