--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^3.0.0"
+		"@sveltejs/adapter-vercel": "^3.0.0",
+		"firebase": "^9.22.1"
 	}
 }
